--- a/source/index.html
+++ b/source/index.html
@@ -225,7 +225,7 @@
       <section class="page-footer__information-section">
         <h2 class="visually-hidden">Больше информации:</h2>
         <div class="page-footer__information-container">
-          <h3 class="page-footer__information-heading">Разделы сайта</h3>
+          <h3 class="page-footer__information-heading page-footer__information-heading--open">Разделы сайта</h3>
           <ul class="page-footer__information-list">
             <li class="page-footer__information-item">
               <a class="page-footer__information-link" href="#">О компании</a>
@@ -251,8 +251,8 @@
           </ul>
         </div>
         <div class="page-footer__information-container page-footer__information-container--office">
-          <h3 class="page-footer__information-heading">Наш офис</h3>
-          <ul class="page-footer__information-list page-footer__information-list--open">
+          <h3 class="page-footer__information-heading page-footer__information-heading--open">Наш офис</h3>
+          <ul class="page-footer__information-list">
             <li class="page-footer__information-item">
               <a class="page-footer__information-link" href="#">г. Мытищи, Олимпийский проспект, д.10</a>
             </li>
@@ -279,7 +279,7 @@
     </div>
   </footer>
 
-  <script type="module" src="js/bundle.js"></script>
+  <script src="js/bundle.js"></script>
 
 </body>
 </html>
