--- a/source/index.html
+++ b/source/index.html
@@ -184,6 +184,43 @@
         </div>
       </section>
     </div>
+
+    <div class="popup-call">
+      <div class="popup-call__container">
+        <button class="popup-call__close-button" type="button">
+          <span class="visually-hidden">закрыть окно</span>
+        </button>
+        <h2 class="popup-call__heading">Закажите звонок</h2>
+        <p class="popup-call__description">Оставьте контакты, мы проконсультируем вас бесплатно в удобное время</p>
+        <form class="popup-call__feedback-form" action="#" method="post">
+          <fieldset class="popup-call__fieldset">
+            <ul class="popup-call__list">
+              <li class="popup-call__item">
+                <label class="visually-hidden" for="popup-call-user-name">Ваше имя:</label>
+                <input autofocus class="popup-call__input input" type="text" name="popup-call-user-name" id="popup-call-user-name" placeholder="Имя"
+                pattern="^[А-Яа-яЁё\s]+$" required>
+                <span class="popup-call__input-error input-error">Введите имя русскими буквами</span>
+              </li>
+              <li class="popup-call__item">
+                <label class="visually-hidden" for="popup-call-user-tel">Ваш телефон:</label>
+                <input class="popup-call__input input" type="tel" name="popup-call-user-tel" id="popup-call-user-tel" placeholder="Телефон"
+                required>
+                <span class="popup-call__input-error input-error">Введите телефон: +7 (123) 456 78 90</span>
+              </li>
+              <li class="popup-call__item popup-call__item--textarea">
+                <label class="visually-hidden" for="popup-call-user-question">Ваш вопрос:</label>
+                <textarea name="text" placeholder="Ваш вопрос" cols="30" rows="6" id="popup-call-user-question"></textarea>
+              </li>
+            </ul>
+          </fieldset>
+          <button class="popup-call__button button" type="submit">Задать вопрос</button>
+          <input class="popup-call__checkbox visually-hidden" type="checkbox" name="popup-consent" id="popup-consent" value="true" required>
+          <label class="popup-call__label popup-call__label--consent" for="popup-consent">
+            Я согласен на обработку  персональных данных
+          </label>
+        </form>
+      </div>
+    </div>
   </main>
 
   <footer class="page-footer">
