gulp webp, little fixes

--- a/source/index.html
+++ b/source/index.html
@@ -13,7 +13,7 @@
     <include src="build/img/sprite_auto.svg"></include>
   </div>
 
-  <div class="headband-container">
+  <div class="headband-container" data-bg="webp">
     <header class="headband-container__page-header page-header container">
       <ul class="page-header__list">
         <li class="page-header__item page-header__item--logo">
