--- a/source/index.html
+++ b/source/index.html
@@ -10,7 +10,7 @@
   <link rel="preload" href="/fonts/pt-mono-v7-latin-regular.woff2" as="font">
   <link rel="stylesheet" href="css/style.min.css">
 </head>
-<body>
+<body class="body-page">
   <div style="display:none">
     <include src="build/img/sprite_auto.svg"></include>
   </div>
